tests/snapshots/compile_snapshots__cross-namespace.cedar.snap
---
source: tests/compile_snapshots.rs
expression: fixture.source
---
// Generated by np2cedar from 2 NetworkPolicy object(s). Do not edit by hand.
//
// A connection source -> destination is allowed if and only if BOTH decisions
// are Allow, because Kubernetes requires the sending and receiving ends to agree:
//
//   is_authorized(Action::"egress",  source, destination, context)
//   is_authorized(Action::"ingress", source, destination, context)

// Pods selected by no Ingress-type NetworkPolicy are not isolated for ingress.
@k8sKind("catch-all")
@k8sDirection("ingress")
permit (principal, action == Action::"ingress", resource)
unless {
  resource is Pod &&
  // b/deny-all-ingress
  resource.namespace == Namespace::"b"
};

// Pods selected by no Egress-type NetworkPolicy are not isolated for egress.
@k8sKind("catch-all")
@k8sDirection("egress")
permit (principal, action == Action::"egress", resource)
unless {
  principal is Pod &&
  // a/allow-egress-to-b
  (
    principal.namespace == Namespace::"a" &&
    principal.labels.hasTag("app") &&
    principal.labels.getTag("app") == "front"
  )
};

@k8sPolicy("a/allow-egress-to-b")
@k8sDirection("egress")
@k8sRule("0")
permit (
  principal is Pod,
  action == Action::"egress",
  resource
)
when {
  // spec.podSelector, in the policy's namespace a
  (
    principal.namespace == Namespace::"a" &&
    principal.labels.hasTag("app") &&
    principal.labels.getTag("app") == "front"
  ) &&
  // egress[0].to (any of)
  (
    resource is Pod &&
    resource.namespace.labels.hasTag("kubernetes.io/metadata.name") &&
    resource.namespace.labels.getTag("kubernetes.io/metadata.name") == "b"
  )
};
