tests/snapshots/compile_snapshots__egress-defaulting.cedar.snap
---
source: tests/compile_snapshots.rs
expression: fixture.source
---
// Generated by np2cedar from 1 NetworkPolicy object(s). Do not edit by hand.
//
// A connection source -> destination is allowed if and only if BOTH decisions
// are Allow, because Kubernetes requires the sending and receiving ends to agree:
//
//   is_authorized(Action::"egress",  source, destination, context)
//   is_authorized(Action::"ingress", source, destination, context)

// Pods selected by no Ingress-type NetworkPolicy are not isolated for ingress.
@k8sKind("catch-all")
@k8sDirection("ingress")
permit (principal, action == Action::"ingress", resource)
unless {
  resource is Pod &&
  // default/egress-only
  (
    resource.namespace == Namespace::"default" &&
    resource.labels.hasTag("app") &&
    resource.labels.getTag("app") == "worker"
  )
};

// Pods selected by no Egress-type NetworkPolicy are not isolated for egress.
@k8sKind("catch-all")
@k8sDirection("egress")
permit (principal, action == Action::"egress", resource)
unless {
  principal is Pod &&
  // default/egress-only
  (
    principal.namespace == Namespace::"default" &&
    principal.labels.hasTag("app") &&
    principal.labels.getTag("app") == "worker"
  )
};

@k8sPolicy("default/egress-only")
@k8sDirection("egress")
@k8sRule("0")
permit (
  principal is Pod,
  action == Action::"egress",
  resource
)
when {
  // spec.podSelector, in the policy's namespace default
  (
    principal.namespace == Namespace::"default" &&
    principal.labels.hasTag("app") &&
    principal.labels.getTag("app") == "worker"
  ) &&
  // egress[0].to (any of)
  (
    resource is Pod &&
    resource.namespace == Namespace::"default" &&
    resource.labels.hasTag("app") &&
    resource.labels.getTag("app") == "cache"
  )
};
